[package]
name = "reinforcement-learning-pipeline"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Minimal RL env/agent loop, episodic training harness, and rlpipe CLI"
license = "MIT"
repository = "https://github.com/ml-lubich/reinforcement-learning-pipeline"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lib]
name = "reinforcement_learning_pipeline"
path = "src/lib.rs"

[[bin]]
name = "rlpipe"
path = "src/main.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
float_cmp = "allow"
map_unwrap_or = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"
needless_pass_by_value = "allow"
